# Bluenaas

./: .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.worker  Makefile  README.md  arch.md  celery.sh  docker-api-cmd.sh  docker-compose.yml  docker-worker-cmd.sh  file-lock-test.sh  init-aws.sh  nfs-config.sh  process-test.sh  pyproject.toml
.github/workflows/: deploy-staging.yml  deploy.yml  publish-distributed-app-production.yml  publish-distributed-app-staging.yml  publish-distributed-app.yml  publish-production-image.yml  publish-production.yml  review.yml
app/: app.py  constants.py  context.py  logging.py  worker.py
app/config/: settings.py
app/core/: api.py  cell.py  compilation_cache.py  http_stream.py  job.py  job_stream.py  model.py  simulation.py  simulation_factory_plot.py  stimulation.py  synaptome_simulation.py  types.py
app/core/circuit/: circuit.py  simulation-mpi-entrypoint.py  simulation.py  simulation_output.py
app/core/exceptions/: __init__.py
app/core/ion_channel/: build.py
app/core/mesh/: analysis.py  em_cell_mesh.py  mesh.py  skeletonization.py  skeletonization_output.py
app/core/single_neuron/: calibration.py  calibration_output.py  compatibility.py  single_neuron.py  validation.py  validation_output.py
app/domains/: auth.py  expandable_model.py  job.py  morphology.py  neuron_model.py  nexus.py  simulation.py  stream_message.py
app/domains/circuit/: circuit.py  simulation.py
app/domains/ion_channel/: ion_channel.py
app/domains/mesh/: analysis.py  skeletonization.py
app/infrastructure/accounting/: session.py
app/infrastructure/kc/: auth.py  config.py
app/infrastructure/metrics/: __init__.py  base.py  cloudwatch.py  service.py  stdout.py
app/infrastructure/redis/: __init__.py  async_redis.py  asyncio.py
app/infrastructure/rq/: __init__.py
app/infrastructure/storage/: __init__.py
app/job/: __init__.py
app/middleware/: request_id.py
app/routes/: __init__.py  admin.py  circuit.py  graph_data.py  ion_channel.py  mesh.py  morphology.py  neuron_model.py  simulation.py  single_neuron.py  synaptome.py  validation.py
app/routes/dependencies/: __init__.py
app/routes/entitycore/: __init__.py  generate_synapses.py  graph.py  morphology.py  simulation.py
app/services/: morphology_dendrogram.py  synapses_placement.py
app/services/circuit/: run-sim-mpi-entrypoint.py  simulation.py
app/utils/: accounting.py  asyncio.py  const.py  datetime.py  file_upload.py  generate_id.py  rq_job.py  safe_process.py  simulation.py  storage.py  streaming.py  util.py  util.test.py  utils_spiketrain_test.py
backend/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  logging.yaml  setup.py
backend/blue_naas/: Nexus.py  StimulusFactoryPlot.py  cell.py  handler.py  main.py  settings.py  simulation.py  util.py
bluenaas/: app.py  worker.py
bluenaas/config/: settings.py
bluenaas/core/: cell.py  entitycore.py  model.py  schemas.py  simulation.py  simulation_factory_plot.py  stimulation.py  synaptome_simulation.py
bluenaas/domains/: morphology.py  neuron_model.py  nexus.py  simulation.py  validation.py
bluenaas/routes/: admin.py  circuit.py  distributed_simulation.py  graph_data.py  morphology.py  neuron_model.py  sim_group.py  simulation.py  synaptome.py  validation.py
bluenaas/services/: current_clamp_plot.py  direct_current_plot.py  get_morphology_task.py  model_cache.py  morphology.py  morphology_dendrogram.py  simulation.py  single_neuron_simulation.py  synapse_simulation.py  synapses.py  synapses_placement.py  synaptome_simulation.py  validate_model.py  validate_synapse_formula.py
bluenaas/utils/: bearer_token.py  chunky.py  const.py  cpu_usage.py  ensure_list.py  get_last_progress_time.py  hash_obj.py  rq_job.py  run_on_env.py  serializer.py  simulated_models.py  simulation.py  streaming.py  util.py  util.test.py  utils_spiketrain_test.py
frontend/: Makefile
frontend/src/: app.html  app.js  morphology.js  params.js  web-socket-svc.js
local-setup/: init-aws.sh  nfs-config.sh
scripts/: celery.sh  entrypoint.sh  validate_job_fn_refs.py
tests/: __init__.py  test_cors.py  test_logging.py  test_worker.py
tests/core/: test_compatibility.py  test_compilation_cache.py  test_http_stream.py  test_single_neuron_candidate.py  test_stimulation_spike_detection.py
tests/domains/: expandable_model.py
tests/middleware/: test_request_id.py
tests/routes/: test_admin.py  test_single_neuron_compatibility.py
tests/utils/: test_asyncio.py  test_rq_job.py  test_util.py
(+137 files in other folders)
