[project]
name = "bluenaas"
version = "0.1.0"
description = "Service to launch and manage single cell and small network neuron simulations"
license = "Apache-2.0"
authors = [
    { name = "Open Brain Institute", email = "info@openbraininstitute.org" }
]
readme = "README.md"
requires-python = "==3.12.12"

dependencies = [
    "entitysdk==0.11.1",
    "loguru==0.7.3",
    "msgpack>=1.1.1",
    "obp-accounting-sdk==0.4.2",
    "pandas==2.3.1",
    "pydantic-settings==2.10.1",
    "pydantic==2.12.0",
    "redis[hiredis]==6.2.0",
    "rq==2.6.0",
    "sympy==1.14.0",
]

[dependency-groups]
api = [
    "boto3>=1.40.29",
    "fastapi[standard]==0.116.1",
    "python-keycloak==5.6.0",
    "sentry-sdk[fastapi]==2.33.0",
]
worker = [
    "bluecellulab==2.6.74",
    "efel==5.7.20",
    "filelock==3.18.0",
    "ion-channel-builder",
    "morphio==3.4.0",
    "numpy>=2.0.0,<2.4",
    "obi-one==2026.1.2",
    "pynwb==3.1.2",
    "requests==2.32.4",
    "ultraliser",
]
dev = [
    "pyright>=1.1.407",
    "ruff==0.14.4",
]
types = [
    "msgpack-types>=0.5.0",
    "types-requests==2.32.4.20250611",
]

[tool.pyright]
exclude = [
    "app/core/circuit/simulation-mpi-entrypoint.py",
    "app/utils/util.test.py"
]
reportCallIssue = "warning"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
find-links = ["ext-deps/ultraliser"]

[tool.uv.sources]
ion-channel-builder = { git = "https://github.com/openbraininstitute/ion-channel-builder.git", tag = "0.0.10" }
