[project]
name = "bluenaas"
version = "0.1.0"
description = "Service to launch and manage single cell and small network neuron simulations"
license = "Apache-2.0"
authors = [
    { name = "Open Brain Institute", email = "info@openbraininstitute.org" }
]
readme = "README.md"
requires-python = "==3.12.13"

dependencies = [
    "entitysdk==0.12.4",
    "loguru==0.7.3",
    "msgpack>=1.1.2",
    "obp-accounting-sdk==0.5.1",
    "pandas==2.3.1",
    "pydantic-settings==2.13.1",
    "pydantic==2.12.5",
    "redis[hiredis]==7.3.0",
    "rq==2.7.0",
    "sympy==1.14.0",
]

[dependency-groups]
api = [
    "boto3==1.42.63",
    "fastapi[standard]==0.135.1",
    "python-keycloak==7.1.1",
    "sentry-sdk[fastapi]==2.54.0",
]
worker = [
    "bluecellulab==2.6.87",
    "efel==5.7.20",
    "filelock==3.25.0",
    "ion-channel-builder",
    "morphio==3.4.1",
    "numpy>=2.0.0,<2.4",
    "obi-one==2026.3.7",
    "pynwb==3.1.3",
    "requests==2.32.5",
    "ultraliser",
]
dev = [
    "pyright>=1.1.408",
    "ruff==0.15.5",
]
types = [
    "msgpack-types>=0.7.0",
    "types-requests==2.32.4.20260107",
]

[tool.pyright]
exclude = [
    "app/core/circuit/simulation-mpi-entrypoint.py",
    "app/utils/util.test.py"
]
reportCallIssue = "warning"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
find-links = ["ext-deps/ultraliser"]

[tool.uv.sources]
ion-channel-builder = { git = "https://github.com/openbraininstitute/ion-channel-builder.git", tag = "0.0.15" }
